# iHaul

./: Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: main.rs  settings.rs
src/device/: apps.rs  house_arrest.rs  mod.rs
src/i18n/: en.rs  ja.rs  mod.rs  zh_cn.rs
src/ui/: helpers.rs  mod.rs  types.rs
